[package]
name = "uds-client"
version = "0.1.11"
edition = "2024"
authors = ["tuemb <nvtu96@gmail.com>"]
description   = "UDS client crate in Rust"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/TuEmb/uds-client-rs.git"

[dependencies]
log = "0.4.26"
embedded-io-async = "0.6.1"
tokio = { version = "1.44.0", features = ["full"] }
nb = "1"
automotive_diag = "0.1.11"
chrono = "0.4.40"
embedded-can = "0.4.1"
thiserror = "2.0.12"

[target.'cfg(windows)'.dependencies]
peak-can = "0.1.1"

[target.'cfg(unix)'.dependencies]
dialoguer = "0.11.0"
socketcan = "3.5.0"

